// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartItem renders 1`] = `
<div>
  <div
    class="flex items-center justify-between border-b border-grey-200 py-5 dark:border-slate-500"
  >
    <div
      class="flex items-center"
    >
      icon
      <span
        class="ml-3 dark:text-slate-50"
      >
        title
      </span>
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="mr-4 text-sm font-medium"
      >
        Ξ1
      </span>
      <svg
        aria-hidden="true"
        class="inline h-6 w-6 text-grey-400 dark:text-slate-300 md:h-4 md:w-4"
        data-testid="cart-item-remove-button"
        fill="none"
        role="button"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`CartItem renders price as dash when price is null 1`] = `
<div>
  <div
    class="flex items-center justify-between border-b border-grey-200 py-5 dark:border-slate-500"
  >
    <div
      class="flex items-center"
    >
      icon
      <span
        class="ml-3 dark:text-slate-50"
      >
        title
      </span>
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="mr-8 flex w-fit gap-3 rounded-lg border border-grey-200 p-1 text-sm"
      >
        <button
          data-testid="cart-item-decrease-button"
        >
          <svg
            aria-hidden="true"
            class="h-4 w-4 text-grey-500"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.5 12h-15"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
        2
        <button
          data-testid="cart-item-increase-button"
        >
          <svg
            aria-hidden="true"
            class="h-4 w-4 text-grey-500"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 4.5v15m7.5-7.5h-15"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </span>
      <span
        class="mr-4 text-sm font-medium"
      >
        -
      </span>
      <svg
        aria-hidden="true"
        class="inline h-6 w-6 text-grey-400 dark:text-slate-300 md:h-4 md:w-4"
        data-testid="cart-item-remove-button"
        fill="none"
        role="button"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`CartItem renders with quantity 1`] = `
<div>
  <div
    class="flex items-center justify-between border-b border-grey-200 py-5 dark:border-slate-500"
  >
    <div
      class="flex items-center"
    >
      icon
      <span
        class="ml-3 dark:text-slate-50"
      >
        title
      </span>
    </div>
    <div
      class="flex items-center"
    >
      <span
        class="mr-8 flex w-fit gap-3 rounded-lg border border-grey-200 p-1 text-sm"
      >
        <button
          data-testid="cart-item-decrease-button"
        >
          <svg
            aria-hidden="true"
            class="h-4 w-4 text-grey-500"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19.5 12h-15"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
        2
        <button
          data-testid="cart-item-increase-button"
        >
          <svg
            aria-hidden="true"
            class="h-4 w-4 text-grey-500"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 4.5v15m7.5-7.5h-15"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </span>
      <span
        class="mr-4 text-sm font-medium"
      >
        Ξ1
      </span>
      <svg
        aria-hidden="true"
        class="inline h-6 w-6 text-grey-400 dark:text-slate-300 md:h-4 md:w-4"
        data-testid="cart-item-remove-button"
        fill="none"
        role="button"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </div>
  </div>
</div>
`;
